objects/Exception_Log__c.object
<CustomObject>
    <description>Object to log exception somewhere in our defined system.</description>
    <fields>
        <fullName>Class__c</fullName>
        <description>To contain apex class name  where error logged.</description>
        <inlineHelpText>Apex class name where error logged.</inlineHelpText>
        <label>Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>To contain error full information i.e. stacktrace.</description>
        <inlineHelpText>Error complete details</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>To contain apex class method where error logged.</description>
        <inlineHelpText>Apex method name where error logged.</inlineHelpText>
        <label>Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>EL-{0000000000}</displayFormat>
        <label>Exception Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>